fix: order swagger update
